# active-protocol-discovery

./: LICENSE  README.md  pyproject.toml
active_protocol_discovery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apd/: __init__.py  apd.py  models.py  policy.py  sprt.py  utils.py
experiments/: adversarial_agent_demo.py  benchmark.py  gaussian_demo.py
tests/: test_apd.py  test_models.py  test_policy.py  test_sprt.py
