[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "active-protocol-discovery"
version = "0.1.2"
description = "Active Protocol Discovery — detect hidden adaptive structure via sequential KL-optimal probing. 45x faster than passive monitoring, mathematically guaranteed error rates."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Mikoshi Ltd", email = "darren@mikoshi.co.uk"}]
requires-python = ">=3.9"
keywords = [
    "adversarial-detection", "active-testing", "sequential-testing",
    "hypothesis-testing", "SPRT", "KL-divergence", "anomaly-detection",
    "bot-detection", "AI-safety", "multi-agent", "adaptive-systems",
    "probe", "security", "deception-detection"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = ["pytest>=7.0", "matplotlib>=3.5"]

[project.scripts]
apd-demo = "experiments.gaussian_demo:main"

[project.urls]
Homepage = "https://github.com/DarrenEdwards111/active-protocol-discovery"
Repository = "https://github.com/DarrenEdwards111/active-protocol-discovery"

[tool.setuptools.packages.find]
include = ["apd*", "experiments*"]
